# terminal-snake

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING.md  README.md  pyproject.toml  setup.py
terminal_snake/: __init__.py  cli.py  game.py
